reorganisation des 5 cartes notre offre

--- a/app/assets/stylesheets/components/_card_organisation.scss
+++ b/app/assets/stylesheets/components/_card_organisation.scss
@@ -1,27 +1,66 @@
-
-.card-title-orga {
-  text-align: center;
-  color: $red-vif;
-  font-family: 'Train One', cursive;
+.card-grid-organisation {
+  display: grid;
+  grid-gap: 24px;
 }
 
-.card-text-orga{
-  text-align: center;
-  color: white;
+/*Media Queries*/
+
+/*Smallest device*/
+@media (min-width: 100px) and (max-width: 575px) {
+  .card-grid-organisation {
+    grid-template-columns: 1fr;
+    padding: 16px;
+    margin-bottom: 30px;
+
+  }
+  .organisation {
+    margin-bottom: 20px;
+  }
 }
 
-.card-img-orga {
-  width: 30%;
-  border-radius: 20%;
-  margin-bottom: 20px;
+/*Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) {
+  .card-grid-organisation {
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 16px 64px;
+    margin-bottom: 50px;
+  }
+  .organisation {
+    margin-bottom: 20px;
+  }
+}
+
+/*Medium devices (tablets, 768px and up)*/
+@media (min-width: 1200px) {
+  .card-grid-organisation {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    padding: 16px 128px;
+    margin-bottom: 75px;
+  }
 }
 
 .image-organisation {
   text-align: center;
 }
 
-.organisation {
-  margin: 0px 10px 0px 10px;
+.card-img-orga {
+  height: 90px;
+  margin-bottom: 10px;
+}
+
+.card-number-orga {
+  width: 100%;
+}
+
+.card-title-orga {
+  text-align: center;
+  color: $red-vif;
+  font-size: 18px;
+}
+
+.card-text-orga{
+  text-align: center;
+  color: white;
 }
 
 // #chronologie {
@@ -30,40 +69,6 @@
 //   position: absolute;
 // }
 
-.card-title-orga {
-  font-size: 1rem;
-  margin-bottom: 10px;
-}
-
-/*Media Queries*/
-
-/*Smallest device*/
-@media (min-width: 100px) and (max-width: 575px) {
-  .card-grid-services {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    padding: 16px;
-
-    .card-title-orga {
-      width: 20%;
-    }
-  }
-}
-
-/*Small devices (landscape phones, 576px and up)*/
-@media (min-width: 576px) {
-  .card-grid-services {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    padding: 16px 64px;
-  }
-}
-
-/*Medium devices (tablets, 768px and up)*/
-@media (min-width: 1200px) {
-  .card-grid-services {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    padding: 16px 128px;
-  }
-}
 
 
 
