--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -57,46 +57,51 @@
 
 <h2 class="section-title">Une offre 100% sur-mesure</h2>
 
-<div class="card-grid-services">
+<div class="card-grid-organisation">
   <div class="organisation">
-    <div class="card-title-orga">Etude de vos besoins</div>
     <div class="image-organisation">
+      <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623923690/Atelier%20409/icons/un_dtg1yz.png" class="card-number-orga" alt="etape-1">
       <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623920103/Atelier%20409/icons/etude_ezktoo.png" class="card-img-orga" alt="etude">
     <%# <div id="chronologie"><hr></div> %>
     </div>
+    <h3 class="card-title-orga">Etude de vos besoins</h3>
     <div class="card-text-orga">Définissons un cahier des charges</div>
   </div>
 
 <div class="organisation">
-    <div class="card-title-orga">Planification / Maquette</div>
     <div class="image-organisation">
+      <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623924191/Atelier%20409/icons/deux_im48ww.png" class="card-number-orga" alt="etape-2">
       <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623920103/Atelier%20409/icons/maquette_zemyqb.png" class="card-img-orga" alt="planification">
     </div>
+    <h3 class="card-title-orga">Planification / Maquette</h3>
     <div class="card-text-orga">Planification du projet</div>
     <div class="card-text-orga">Réalisation des maquettes</div>
   </div>
 
   <div class="organisation">
-    <div class="card-title-orga">Conception / Développement</div>
     <div class="image-organisation">
+      <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623924191/Atelier%20409/icons/trois_yqrtgr.png" class="card-number-orga" alt="etape-3">
       <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623920103/Atelier%20409/icons/conception_hsch1v.png" class="card-img-orga" alt="conception">
     </div>
+    <h3 class="card-title-orga">Conception / Développement</h3>
     <div class="card-text-orga">Nous créons et développons votre site</div>
   </div>
 
 <div class="organisation">
-    <div class="card-title-orga">Livraison</div>
     <div class="image-organisation">
+      <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623924191/Atelier%20409/icons/quatre_osfmeb.png" class="card-number-orga" alt="etape-4">
       <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623920103/Atelier%20409/icons/livraison_m1kp7b.png" class="card-img-orga" alt="livraison">
     </div>
+    <h3 class="card-title-orga">Livraison</h3>
     <div class="card-text-orga">Mise en production et livraison</div>
   </div>
 
   <div class="organisation">
-    <div class="card-title-orga">Accompagnement / Suivi</div>
     <div class="image-organisation">
+      <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623924191/Atelier%20409/icons/cinq_nlze4b.png" class="card-number-orga" alt="etape-5">
       <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623920103/Atelier%20409/icons/suivi_dinfrt.png" class="card-img-orga" alt="accompagnement">
     </div>
+    <h3 class="card-title-orga">Accompagnement / Suivi</h3>
     <div class="card-text-orga">Mises à jour</div>
     <div class="card-text-orga">Entretien</div>
   </div>
