--- a/app/assets/stylesheets/components/_card_team.scss
+++ b/app/assets/stylesheets/components/_card_team.scss
@@ -1,21 +1,35 @@
 .card-team-body {
   text-align: center;
   color: white;
-    h5 {
+    h3 {
       color: $red-vif;
+      font-size: 18px;
     }
 }
 
 .card-img-top {
-  width: 30%;
+  height: 120px;
+  width: 120px;
   border-radius: 50%;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .image-team{
   text-align: center;
 }
 
-.team {
-  margin: 0px 10px 0px 10px;
+.team-links a {
+  color: $red-vif;
+  opacity: 0.15;
+  text-decoration: none;
+  font-size: 24px;
+  padding: 0px 10px;
+}
+
+.team-links a:hover {
+  opacity: 1;
+}
+
+.card-text {
+  margin-bottom: 0;
 }
