footer sans icones

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -150,7 +150,7 @@
     </div>
       <div class="card-team-body">
         <h3 class="card-title">Jeremy</h3>
-        <p class="card-text">Le plus calme de la bande ...Pas sur ! Le plus créatif c'est lui , il n'a pas son égal pour créer les maquettes tellement belles qu'on transpire rien qu'a savoir qu'il va falloir coder avec des animations de ouf !</p>
+        <p class="card-text">Le plus calme de la bande... pas sûr ! Le plus créatif c'est lui, il n'a pas son égal pour créer des maquettes tellement belles qu'on transpire rien qu'à savoir qu'il va falloir coder avec ces animations de ouf !</p>
         <div class="team-links">
           <a href="https://www.linkedin.com/in/jeremy-lannes-1b0086106/"><i class="fab fa-linkedin"></i></a>
         </div>
@@ -174,13 +174,6 @@
 
 
 <div class="footer">
-  <div class="footer-links">
-    <a href="#"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-  </div>
-  <div class="footer-copyright">
-    Site propulsé par le collectif  de <strong>l'Atelier 409</strong>
-  </div>
+  <p>Site propulsé par le collectif  de <strong>l'Atelier 409</strong></p>
 </div>
 
