--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,16 +1,16 @@
 
 .footer {
   background: $blue-a;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 100px;
-  padding: 0px 50px;
+  padding: 30px 0;
   color: $red-vif;
+  text-align: center;
   //position: absolute;
   //bottom: 0;
   //left: 0;
   //right: 0;
+  p {
+    margin-bottom: 0;
+  }
 }
 
 
