hover effect bouton

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
 <div class="banner">
     <h1>Atelier de conception-réalisation de sites internet</h1>
     <p>A l'Atelier 409, vos idées prennent vie. Laissez-nous vous guider dans la réalisation de votre site internet</p>
-    <a class="btn btn-flat" href="">DEVIS GRATUIT</a>
+    <a class="btn btn-flat" href="#contact">DEVIS GRATUIT</a>
 </div>
 
 <div class="blob">
@@ -158,7 +158,7 @@
   </div>
 </div>
 
-<div class="contact">
+<div class="contact" id="contact">
   <h2 class="section-title">Contact</h2>
   <div class="contact-section row">
       <div class="contact-details col-sm-12 col-md-3">
