gem mail_form ajoutée - changement de branche

--- a/app/views/contacts/_new.html.erb
+++ b/app/views/contacts/_new.html.erb
@@ -9,7 +9,7 @@
       <%= f.text_field :name, required: true %>
     </div>
     <div class="form-field">
-      <%= f.label :societe, 'Societe:'%> <br>
+      <%= f.label :societe, 'Société:'%> <br>
       <%= f.text_field :societe, as: :text %>
     </div>
     <div class="form-field">
