--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -65,7 +65,7 @@
     <%# <div id="chronologie"><hr></div> %>
     </div>
     <h3 class="card-title-orga">Etude de vos besoins</h3>
-    <div class="card-text-orga">Définissons un cahier des charges</div>
+    <div class="card-text-orga">Définition d'un cahier des charges</div>
   </div>
 
 <div class="organisation">
@@ -84,7 +84,7 @@
       <img src="https://res.cloudinary.com/df0stqosw/image/upload/v1623920103/Atelier%20409/icons/conception_hsch1v.png" class="card-img-orga" alt="conception">
     </div>
     <h3 class="card-title-orga">Conception / Développement</h3>
-    <div class="card-text-orga">Nous créons et développons votre site</div>
+    <div class="card-text-orga">Création et développement de votre site</div>
   </div>
 
 <div class="organisation">
@@ -126,7 +126,7 @@
     </div>
       <div class="card-team-body">
         <h3 class="card-title">Tanguy</h3>
-        <p class="card-text">Il n'est pas qu'un développeur passionné et rigoureux ! C'est aussi le plus sportif de la bande. N'essayez pas de voler nos idées, il vous rattraperait en quelques millisecondes.</p>
+        <p class="card-text">Il n'est pas qu'un développeur passionné et rigoureux ! C'est aussi le plus sportif de la bande. N'essayez pas de partir avec nos idées, il vous rattraperait en un rien de temps.</p>
         <div class="team-links">
           <a href="https://www.linkedin.com/in/tanguy-leveque-708183108/"><i class="fab fa-linkedin"></i></a>
         </div>
@@ -138,7 +138,7 @@
     </div>
       <div class="card-team-body">
         <h3 class="card-title">Beryl</h3>
-        <p class="card-text">Vous souhaitez des renseignements techniques ? Dans ce cas, c'est à Beryl qu'il faut vous adresser. On lui a octroyé à la majorité absolue le titre de cerveau de l'équipe (normal, c'est la seule fille direz-vous...).</p>
+        <p class="card-text">Vous avez des questions techniques ? Dans ce cas, c'est à Beryl qu'il faut vous adresser. On lui a octroyé à la majorité absolue le titre de cerveau de l'équipe (normal, c'est la seule fille direz-vous...).</p>
         <div class="team-links">
           <a href="https://www.linkedin.com/in/berylkoller/"><i class="fab fa-linkedin"></i></a>
         </div>
@@ -150,7 +150,7 @@
     </div>
       <div class="card-team-body">
         <h3 class="card-title">Jeremy</h3>
-        <p class="card-text">Le plus calme de la bande... pas sûr ! Le plus créatif c'est lui, il n'a pas son égal pour créer des maquettes tellement belles qu'on transpire rien qu'à savoir qu'il va falloir coder avec ces animations de ouf !</p>
+        <p class="card-text">Le plus calme de la bande... pas sûr ! Le plus créatif c'est lui. Ses maquettes sont tellement belles qu'on transpire en sachant qu'il va falloir coder ses animations de ouf !</p>
         <div class="team-links">
           <a href="https://www.linkedin.com/in/jeremy-lannes-1b0086106/"><i class="fab fa-linkedin"></i></a>
         </div>
