--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Atelier409Site</title>
+    <title>Atelier409</title>
 <meta name="title" content="Ateleir 409 - Le collectif qui crée à votre image votre site internet">
-<meta name="imzge" content="logo atelier 409">
+<meta name="image" content="logo atelier 409">
 <meta name="description" content="Atelier de conception-réalisation de sites internet. Devis 100% gratuit. Laissez-nous vous guider par notre collectif pour la réalisation de votre site internet ">
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
